--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -35,7 +35,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
+   "id": "fda1ed02-7d9c-4c96-a1aa-dcfb376fa015",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\benny\\Jupyter\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "current_directory = os.getcwd()\n",
+    "print(current_directory) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "944db3fe-e819-4a36-9e46-f1b475ef3d81",
    "metadata": {
     "tags": []
