--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -304,14 +304,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 181,
    "id": "ddd3bfea-7847-4108-9241-42a841077e28",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import ShuffleSplit\n",
+    "from sklearn.model_selection import ShuffleSplit, train_test_split\n",
     "# we want to predict the X and y data as follows:\n",
     "if 'ChildPoverty' in df:\n",
     "    y = df['Poverty'].to_numpy() # get the labels we want\n",
@@ -332,10 +332,9 @@
     "#    training and testing splits\n",
     "num_cv_iterations = 3\n",
     "num_instances = len(y)\n",
-    "cv_object = ShuffleSplit(\n",
-    "                         n_splits=num_cv_iterations,\n",
-    "                         test_size  = 0.2)\n",
-    "                   "
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
+    "                                                    test_size=0.2, \n",
+    "                                                    random_state=0)\n"
    ]
   },
   {
@@ -358,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 175,
    "id": "1ccd32b8-5e4a-477f-882c-8956894257ea",
    "metadata": {
     "tags": []
@@ -458,8 +457,247 @@
     "        y_pred = np.argmax(A3, axis=0)\n",
     "        return y_pred\n",
     "\n",
-    "    \n",
     "\n",
+    "# now let's add in the following functions:\n",
+    "#    feedforward\n",
+    "#    fit and predict\n",
+    "class TwoLayerPerceptron(TwoLayerPerceptronBase):\n",
+    "    def _feedforward(self, X, W1, W2):\n",
+    "        \"\"\"Compute feedforward step\n",
+    "        -----------\n",
+    "        X : Input layer with original features.\n",
+    "        W1: Weight matrix for input layer -> hidden layer.\n",
+    "        W2: Weight matrix for hidden layer -> output layer.\n",
+    "        ----------\n",
+    "        a1-a3 : activations into layer (or output layer)\n",
+    "        z1-z2 : layer inputs \n",
+    "\n",
+    "        \"\"\"\n",
+    "        A1 = self._add_bias_unit(X.T, how='row')\n",
+    "        Z1 = W1 @ A1\n",
+    "        A2 = self._sigmoid(Z1)\n",
+    "        A2 = self._add_bias_unit(A2, how='row')\n",
+    "        Z2 = W2 @ A2\n",
+    "        A3 = self._sigmoid(Z2)\n",
+    "        return A1, Z1, A2, Z2, A3\n",
+    "    \n",
+    "    def _get_gradient(self, A1, A2, A3, Z1, Z2, Y_enc, W1, W2):\n",
+    "        \"\"\" Compute gradient step using backpropagation.\n",
+    "        \"\"\"\n",
+    "        # need to vectorize this computation!\n",
+    "        # See additional code and derivation below!\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        \"\"\"Predict class labels\"\"\"\n",
+    "        _, _, _, _, A3 = self._feedforward(X, self.W1, self.W2)\n",
+    "        y_pred = np.argmax(A3, axis=0)\n",
+    "        return y_pred\n",
+    "    \n",
+    "    \n",
+    "    def fit(self, X, y, print_progress=False):\n",
+    "        \"\"\" Learn weights from training data.\"\"\"\n",
+    "        \n",
+    "        X_data, y_data = X.copy(), y.copy()\n",
+    "        Y_enc = self._encode_labels(y)\n",
+    "        \n",
+    "        # init weights and setup matrices\n",
+    "        self.n_features_ = X_data.shape[1]\n",
+    "        self.n_output_ = Y_enc.shape[0]\n",
+    "        self.W1, self.W2 = self._initialize_weights()\n",
+    "\n",
+    "        self.cost_ = []\n",
+    "        for i in range(self.epochs):\n",
+    "\n",
+    "            if print_progress>0 and (i+1)%print_progress==0:\n",
+    "                sys.stderr.write('\\rEpoch: %d/%d' % (i+1, self.epochs))\n",
+    "                sys.stderr.flush()\n",
+    "\n",
+    "            # feedforward all instances\n",
+    "            A1, Z1, A2, Z2, A3 = self._feedforward(X_data,self.W1,self.W2)\n",
+    "            \n",
+    "            cost = self._cost(A3,Y_enc,self.W1,self.W2)\n",
+    "            self.cost_.append(cost)\n",
+    "\n",
+    "            # compute gradient via backpropagation\n",
+    "            grad1, grad2 = self._get_gradient(A1=A1, A2=A2, A3=A3, Z1=Z1, Z2=Z2, Y_enc=Y_enc,\n",
+    "                                              W1=self.W1, W2=self.W2)\n",
+    "\n",
+    "            self.W1 -= self.eta * grad1\n",
+    "            self.W2 -= self.eta * grad2\n",
+    "            \n",
+    "\n",
+    "class TwoLayerPerceptronVectorized(TwoLayerPerceptron):\n",
+    "    # just need a different gradient calculation\n",
+    "    def _get_gradient(self, A1, A2, A3, Z1, Z2, Y_enc, W1, W2):\n",
+    "        \"\"\" Compute gradient step using backpropagation.\n",
+    "        \"\"\"\n",
+    "        # vectorized backpropagation\n",
+    "        V2 = -2*(Y_enc-A3)*A3*(1-A3)\n",
+    "        V1 = A2*(1-A2)*(W2.T @ V2)\n",
+    "        \n",
+    "        grad2 = V2 @ A2.T\n",
+    "        grad1 = V1[1:,:] @ A1.T\n",
+    "        \n",
+    "        \n",
+    "        # regularize weights that are not bias terms\n",
+    "        grad1[:, 1:] += W1[:, 1:] * self.l2_C\n",
+    "        grad2[:, 1:] += W2[:, 1:] * self.l2_C\n",
+    "\n",
+    "        return grad1, grad2\n",
+    "\n",
+    "\n",
+    "# Example adapted from https://github.com/rasbt/python-machine-learning-book/blob/master/code/ch12/ch12.ipynb\n",
+    "# Original Author: Sebastian Raschka\n",
+    "# This is the optional book we use in the course, excellent intuitions and straightforward programming examples\n",
+    "# please note, however, that this code has been manipulated to reflect our assumptions and notation.\n",
+    "class TLPVectorizedMiniBatch(TwoLayerPerceptronVectorized):\n",
+    "    def __init__(self, alpha=0.1, decrease_const=0.0, shuffle=True, minibatches=1, **kwds):        \n",
+    "        # need to add to the original initializer \n",
+    "        self.alpha = alpha\n",
+    "        self.decrease_const = decrease_const\n",
+    "        self.shuffle = shuffle\n",
+    "        self.minibatches = minibatches\n",
+    "        # but keep other keywords\n",
+    "        super().__init__(**kwds)\n",
+    "        \n",
+    "    def fit(self, X, y, print_progress=0):\n",
+    "        \"\"\" Learn weights from training data.\"\"\"\n",
+    "        X_data, y_data = X.copy(), y.copy()\n",
+    "        Y_enc = self._encode_labels(y)\n",
+    "        \n",
+    "        # init weights and setup matrices\n",
+    "        self.n_features_ = X_data.shape[1]\n",
+    "        self.n_output_ = Y_enc.shape[0]\n",
+    "        self.W1, self.W2 = self._initialize_weights()\n",
+    "        \n",
+    "        # start momentum at zero for previous updates\n",
+    "        rho_W1_prev = np.zeros(self.W1.shape) # for momentum\n",
+    "        rho_W2_prev = np.zeros(self.W2.shape) # for momentum\n",
+    "\n",
+    "        self.cost_ = []\n",
+    "        for k in range(self.epochs):\n",
+    "\n",
+    "            # adaptive learning rate\n",
+    "            eta = self.eta**(1+self.decrease_const*k)# decreasing learning rate\n",
+    "            eta = max(eta,self.eta/1000)\n",
+    "            # there are many forms of adaptive learning rates out there!\n",
+    "\n",
+    "            if print_progress>0 and (k+1)%print_progress==0:\n",
+    "                sys.stderr.write('\\rEpoch: %d/%d' % (k+1, self.epochs))\n",
+    "                sys.stderr.flush()\n",
+    "\n",
+    "            if self.shuffle:\n",
+    "                ridx = np.random.permutation(y_data.shape[0])\n",
+    "                X_data, Y_enc = X_data[ridx], Y_enc[:, ridx]\n",
+    "\n",
+    "            # use numpy split to split into equal sized batches \n",
+    "            # num batches== self.minibatches\n",
+    "            mini = np.array_split(range(y_data.shape[0]), self.minibatches)\n",
+    "            mini_cost = []\n",
+    "            for idx in mini:\n",
+    "\n",
+    "                # feedforward\n",
+    "                A1, Z1, A2, Z2, A3 = self._feedforward(X_data[idx],\n",
+    "                                                       self.W1,\n",
+    "                                                       self.W2)\n",
+    "                \n",
+    "                cost = self._cost(A3,Y_enc[:, idx],self.W1,self.W2)\n",
+    "                mini_cost.append(cost) # this appends cost of mini-batch only\n",
+    "\n",
+    "                # compute gradient via backpropagation\n",
+    "                grad1, grad2 = self._get_gradient(A1=A1, A2=A2, A3=A3, Z1=Z1, Z2=Z2,\n",
+    "                                                  Y_enc=Y_enc[:, idx],\n",
+    "                                                  W1=self.W1, W2=self.W2)\n",
+    "\n",
+    "                rho_W1, rho_W2 = eta * grad1, eta * grad2\n",
+    "                self.W1 -= (rho_W1 + (self.alpha * rho_W1_prev)) # update with momentum\n",
+    "                self.W2 -= (rho_W2 + (self.alpha * rho_W2_prev)) # update with momentum\n",
+    "                rho_W1_prev, rho_W2_prev = rho_W1, rho_W2\n",
+    "\n",
+    "            self.cost_.append(mini_cost)\n",
+    "            \n",
+    "        return self\n",
+    "\n",
+    "from scipy.optimize import fmin_bfgs\n",
+    "from scipy.optimize import fmin_l_bfgs_b\n",
+    "class TLPVectorizedBFGS(TwoLayerPerceptronVectorized):\n",
+    "    \n",
+    "    def __init__(self, gtol=1e-5, **kwds):        \n",
+    "        # need to add to the original initializer \n",
+    "        self.gtol = gtol\n",
+    "        \n",
+    "        # but keep other keywords\n",
+    "        super().__init__(**kwds)\n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def _pack(in1, in2):\n",
+    "        '''Pack and flatten input vectors '''\n",
+    "        return np.hstack((in1.flatten(),in2.flatten()))\n",
+    "    \n",
+    "    def _unpack(self, in_tot):\n",
+    "        '''Undo packing according to layer weight sizes'''\n",
+    "        out1 = in_tot[:self.W1.size].reshape(self.W1.shape)\n",
+    "        out2 = in_tot[self.W1.size:].reshape(self.W2.shape)\n",
+    "        return out1, out2\n",
+    "    \n",
+    "    def _calc_cost_gradient_packed(self,W,X_data,Y_enc):\n",
+    "        '''Unpack and get cost, gradient for bfgs'''\n",
+    "        W1, W2 = self._unpack(W) \n",
+    "        # feedforward all instances\n",
+    "        A1, Z1, A2, Z2, A3 = self._feedforward(X_data,W1,W2)\n",
+    "        \n",
+    "        cost = np.sum((Y_enc-A3)**2)\n",
+    "        L2_term = self._L2_reg(self.l2_C, W1, W2)\n",
+    "        cost = cost + L2_term\n",
+    "        #perform back prop to get gradients\n",
+    "        grad1,grad2 = self._get_gradient(A1=A1, A2=A2, A3=A3,Z1=Z1, Z2=Z2, Y_enc=Y_enc,\n",
+    "                                         W1=W1, W2=W2)\n",
+    "        return cost, self._pack(grad1,grad2)\n",
+    "    \n",
+    "    def _cost_packed(self,W,X_data,Y_enc):\n",
+    "        '''Unpack and calculate MSE for bfgs'''\n",
+    "        W1, W2 = self._unpack(W)\n",
+    "        _, _, _, _, A3 = self._feedforward(X_data,W1,W2)\n",
+    "        return np.sum((Y_enc-A3)**2)\n",
+    "    \n",
+    "    def fit(self,X,y,print_progress=0):\n",
+    "        '''Learn weights from training data'''\n",
+    "        X_data, y_data = X.copy(), y.copy()\n",
+    "        Y_enc = self._encode_labels(y)\n",
+    "        \n",
+    "        # init weights and setup matrices\n",
+    "        self.n_features_ = X_data.shape[1]\n",
+    "        self.n_output_ = Y_enc.shape[0]\n",
+    "        self.W1, self.W2 = self._initialize_weights()\n",
+    "        \n",
+    "        # make initial matrices into single row vector\n",
+    "        W = self._pack(self.W1,self.W2)\n",
+    "        \n",
+    "        if print_progress>0:\n",
+    "            def callback(xd):\n",
+    "                callback.counter += 1\n",
+    "                if callback.counter%print_progress==0:\n",
+    "                    sys.stderr.write('\\rEpoch: %d/%d (max)' % (callback.counter,callback.epochs))\n",
+    "                    sys.stderr.flush()\n",
+    "\n",
+    "            callback.counter = 0\n",
+    "            callback.epochs = self.epochs\n",
+    "            \n",
+    "        else:\n",
+    "            callback = None\n",
+    "            \n",
+    "        # compute gradient optimum with bfgs\n",
+    "        W_best,_,props = fmin_l_bfgs_b(\n",
+    "                        x0=W,\n",
+    "                        func=self._calc_cost_gradient_packed,\n",
+    "                        maxfun=self.epochs,\n",
+    "                        callback=callback,\n",
+    "                        pgtol=self.gtol,\n",
+    "                        args=(X_data, Y_enc))\n",
+    "        \n",
+    "        self.W1, self.W2 = self._unpack(W_best)\n",
+    "        if print_progress:\n",
+    "            print(props)\n",
     "    \n",
     "class TLPMiniBatch(TwoLayerPerceptronBase):\n",
     "    def __init__(self, alpha=0.0, decrease_const=0.0, shuffle=True, \n",
@@ -580,16 +818,83 @@
     "        W2[:,:1] = 0\n",
     "        \n",
     "        return W1, W2\n",
+    "    \n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "plt.style.use('ggplot')\n",
+    "\n",
+    "def print_result(nn,X_train,y_train,X_test,y_test,title=\"\",color=\"red\"):\n",
+    "    \n",
+    "    print(\"=================\")\n",
+    "    print(title,\":\")\n",
+    "    yhat = nn.predict(X_train)\n",
+    "    print('Resubstitution acc:',accuracy_score(y_train,yhat))\n",
+    "    \n",
+    "    yhat = nn.predict(X_test)\n",
+    "    print('Validation acc:',accuracy_score(y_test,yhat))\n",
+    "    \n",
+    "    if hasattr(nn,'val_score_'):\n",
+    "        plt.plot(range(len(nn.val_score_)), nn.val_score_, color=color,label=title)\n",
+    "        plt.ylabel('Validation Accuracy')\n",
+    "    else:\n",
+    "        plt.plot(range(len(nn.score_)), nn.score_, color=color,label=title)\n",
+    "        plt.ylabel('Resub Accuracy')\n",
+    "        \n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.tight_layout()\n",
+    "    plt.legend(loc='best')\n",
+    "    plt.grid(True)\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 186,
    "id": "c3b42a55-1999-4a19-bd00-ad70864ba115",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================\n",
+      "MSE Loss :\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'TLPMiniBatch' object has no attribute 'W1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[186], line 10\u001b[0m\n\u001b[0;32m      6\u001b[0m nn_quad \u001b[38;5;241m=\u001b[39m TLPMiniBatch(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mvals)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#nn_cross = TLPMiniBatchCrossEntropy(**vals)\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#nn_better = TLPBetterInitial(**vals)\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m#print_result(nn_cross,X_train,y_train,X_test,y_test,title=\"Cross Entropy Loss\",color=\"red\")\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[43mprint_result\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnn_quad\u001b[49m\u001b[43m,\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43mtitle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mMSE Loss\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mcolor\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mblue\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m#print_result(nn_better,X_train,y_train,X_test,y_test,title=\"MSE Loss\",color=\"yellow\")\u001b[39;00m\n\u001b[0;32m     13\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n",
+      "Cell \u001b[1;32mIn[175], line 467\u001b[0m, in \u001b[0;36mprint_result\u001b[1;34m(nn, X_train, y_train, X_test, y_test, title, color)\u001b[0m\n\u001b[0;32m    465\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m=================\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    466\u001b[0m \u001b[38;5;28mprint\u001b[39m(title,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 467\u001b[0m yhat \u001b[38;5;241m=\u001b[39m \u001b[43mnn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    468\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mResubstitution acc:\u001b[39m\u001b[38;5;124m'\u001b[39m,accuracy_score(y_train,yhat))\n\u001b[0;32m    470\u001b[0m yhat \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mpredict(X_test)\n",
+      "Cell \u001b[1;32mIn[175], line 90\u001b[0m, in \u001b[0;36mTwoLayerPerceptronBase.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpredict\u001b[39m(\u001b[38;5;28mself\u001b[39m, X):\n\u001b[0;32m     89\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Predict class labels\"\"\"\u001b[39;00m\n\u001b[1;32m---> 90\u001b[0m     _, _, _, _, A3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_feedforward(X, \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mW1\u001b[49m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mW2)\n\u001b[0;32m     91\u001b[0m     y_pred \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(A3, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m     92\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m y_pred\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TLPMiniBatch' object has no attribute 'W1'"
+     ]
+    }
+   ],
+   "source": [
+    "vals = { 'n_hidden':30, \n",
+    "         'C':0.1, 'epochs':20, 'eta':0.001, \n",
+    "         'alpha':0.001, 'decrease_const':1e-5, 'minibatches':50,\n",
+    "         'shuffle':True,'random_state':1}\n",
+    "\n",
+    "nn_quad = TLPMiniBatch(**vals)\n",
+    "#nn_cross = TLPMiniBatchCrossEntropy(**vals)\n",
+    "#nn_better = TLPBetterInitial(**vals)\n",
+    "#print_result(nn_cross,X_train,y_train,X_test,y_test,title=\"Cross Entropy Loss\",color=\"red\")\n",
+    "print_result(nn_quad,X_train,y_train,X_test,y_test,title=\"MSE Loss\",color=\"blue\")\n",
+    "#print_result(nn_better,X_train,y_train,X_test,y_test,title=\"MSE Loss\",color=\"yellow\")\n",
+    "\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
